# Advista_api

./: .Dockerignore  .env  .gitignore  .slugignore  Dockerfile  Dockerfile.lambda  README.md  backup_scripts.py  cert.pem  check_astra.py  db.py  docker-compose.yml  insights-server.py  key.pem  lambda_handler.py  langflow_query_generator.json  main.py  notes.txt  processed_results.json  pyproject.toml  query_generator.py  reddit_insights_server.py  requirements.txt  research_context.txt  research_report.json  scripts.py  search_params.json  search_results.json  server_main.py  setup_db.py  startup.sh  test.py  test_video_processor.py  todo  transcribe.py  video_processor.py
.github/workflows/: azure-ci-cd.yml  keep-alive.yml  main_python-api2.yml  main_supermind.yml
prisma/: schema.prisma
prisma/migrations/20260103135758_added_chat_session_and_realted_schema/: migration.sql
prisma/migrations/20260107114752_/: migration.sql
prisma/migrations/20260124105953_adding_research_session/: migration.sql
prisma/migrations/20260124134332_remove_unique_constraint_from_thread_it/: migration.sql
prisma/migrations/20260124143030_add_search_params_to_research_sessions/: migration.sql
prisma/migrations/20260124143031_add_resources_used/: migration.sql
scripts/: build-and-push-lambda.sh
src/: db.py  reddit_insights_server.py  scripts.py  video_processor.py
src/controllers/: auth_controller.py  chat_controller.py  research_controller.py
src/controllers/auth/: auth_controller.py
src/models/: research_brief.py  research_insights.py  search_params.py  search_results.py  user.py
src/repositories/: __init__.py  chat_session_repository.py  research_session_repository.py  user_repository.py
src/services/: analysis_service.py  auth_service.py  chatbot_service.py  database_service.py  email_service.py  firebase_service.py  research_service.py  research_session_service.py  serpapi_service.py  synthesis_service.py  test.py  youtube_service.py
src/utils/: config.py
worker/: celery_app.py  tasks.py
