[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "astrapy>=2.1.0",
    "beautifulsoup4>=4.14.2",
    "email-validator>=2.1.0",
    "fastapi>=0.119.0",
    "fastapi-mail>=1.4.1",
    "firebase-admin>=6.4.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
    "prisma>=0.15.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
